--- a/CSS/Example/css/07_TEST.css
+++ b/CSS/Example/css/07_TEST.css
@@ -13,16 +13,12 @@ h1 {
 }
 h2 {
     border: 3px solid #ffaa00;
-}
-#size2 {
-    display: inline-block;
-}
-.blue {
     color: #1500ff;
     display: inline-block;
 }
 ol {
     color:#03a600;
     border: 3px solid #ffaa00;
-    inline-size: 15em;
+    display: inline-block;
+    padding-right: 15px;
 }
