--- a/CSS/Example/css/08_TEST2.css
+++ b/CSS/Example/css/08_TEST2.css
@@ -11,11 +11,13 @@
     border-top-right-radius: 30px;
     margin: 15px;
     padding: 20px;
+    border-style: dotted;
 }
 .container_2 {
     border: 1px solid #000;
     margin: 15px;
     padding: 20px;
+    border-style: dotted;
 }
 .container_3 {
     border: 1px solid #000;
@@ -23,10 +25,11 @@
     border-bottom-right-radius: 30px;
     margin: 15px;
     padding: 20px;
+    border-style: dotted;
+    border-left-style: solid;
 }
 td, tr, th{
-    border: 1px solid #000;
-    border-style: dotted;
+    border: 1px solid rgba(0, 0, 0, 0.274);
     line-height: 30px;
     height: 30px;
 }
