--- a/CSS/Example/css/08_finalTEST.css
+++ b/CSS/Example/css/08_finalTEST.css
@@ -8,7 +8,7 @@ article {
     height:200px;	
     margin:10px;
     padding:10px;	
-    border:1px dotted #ccc;
+    border:1px dashed #ccc;
 }
 p {
     line-height:20px;
