--- a/CSS/Example/css/10_TEST2.css
+++ b/CSS/Example/css/10_TEST2.css
@@ -32,8 +32,7 @@ input:focus {
     border: 1px solid red;
 }
 .memo {
-    position: relative;
-    top: -110px;
+    vertical-align: top;
 }
 #name, #age {
     background: none;
