--- a/CSS/Example/css/10_1_ex1_selector.css
+++ b/CSS/Example/css/10_1_ex1_selector.css
@@ -15,11 +15,13 @@ header > span {
 /* 형제요소 : 같은 부모요소 아래 자식요소들
     div, span, p */
 /* 형제 요소 + 형제요소 : 형제요소 중, 첫번째 형제요소에 적용, 연속되는 태그로 적어줘야함 */
-span + p {
+/* span 뒤에있는 p중 첫번째 p에 적용 */
+/* span +  p {
     color: blueviolet;
-}
+} */
 
 /* 형제 요소 ~ 형제 요소 : 설정된 모든 형제요소에 적용 */
+/* div3가 앞에 존재하면, span에 적용 */
 .div3 ~ span {
     color: red;
 }
