--- a/CSS/Example/css/naverLogin_test.css
+++ b/CSS/Example/css/naverLogin_test.css
@@ -117,6 +117,7 @@ li {
 .pwbox:focus {
     outline: none;
     border: 1px solid rgb(0, 184, 31);
+    margin-top: -1px;
 }
 .pwbox {
     margin: 0 auto;
