--- a/CSS/Traning/과제/1.HTML_CSS_작업파일/exam.css
+++ b/CSS/Traning/과제/1.HTML_CSS_작업파일/exam.css
@@ -1,3 +1,4 @@
+/* grid */
 * {
     margin: 0;
     padding: 0;
@@ -86,3 +87,96 @@ footer {
     background-color: rgba(0, 0, 0, 0.24);
     text-align: center;
 }
+
+
+/* flex */
+/* * {
+    margin: 0;
+    padding: 0;
+    scroll-behavior:smooth;
+    box-sizing: border-box;
+}
+a {
+    text-decoration: none;
+    color: white;
+    background-color: goldenrod;
+    border: 1px solid goldenrod;
+    border-radius: 5px;
+    padding: 10px;
+}
+a:hover {
+    border: 1px solid rgba(218, 165, 32, 0.432);
+    background-color: rgba(218, 165, 32, 0.432);
+}
+.hero {
+    width: 100vw;
+    height: 100%;
+    color: white;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.hero > h1 {
+    width: 300px;
+    margin-top: 100px;
+    margin-left: 20px;
+}
+.hero > article {
+    width: 500px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-right: 20px;
+    padding: 50px;
+}
+.hero a {
+    position: relative;
+    top: 20px;
+}
+h1 {
+    font-size: 40px;
+}
+li > p {
+    color: rgb(92, 90, 90);
+}
+ul {
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 20px;
+    width: 100%;
+}
+li {
+    border: 1px solid rgba(0, 0, 0, 0.144);
+    border-radius: 5px;
+    margin: 10px;
+    padding: 10px 20px 10px 20px;
+    width: 320px;
+    height: 40vh;
+}
+li a {
+    position: relative;
+    top: 15px;
+}
+figure {
+    position: relative;
+}
+figure > img {
+    width: 100%;
+}
+figcaption {
+    position: absolute;
+    color: white;
+    width: 100%;
+    height: 30%;
+    background-color: rgba(0, 0, 0, 0.568);
+    top: 68%;
+    padding: 10px;
+}
+footer {
+    position: fixed;
+    bottom: 1px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.24);
+    text-align: center;
+} */
